--- a/CameraPickerDemo/Base.lproj/Main.storyboard
+++ b/CameraPickerDemo/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,30 +18,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OSN-Aa-eve">
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mzL-kd-sBK" customClass="CameraPickerView" customModule="CameraPicker">
-                                <color key="backgroundColor" red="0.86274509803921573" green="0.86274509803921573" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="253" id="ugO-AV-vdG"/>
-                                </constraints>
-                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbS-Gv-piS">
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="didSelectShowPicker:" destination="BYZ-38-t0r" eventType="touchUpInside" id="r02-kf-lYz"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lQo-uk-Rx5"/>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="OSN-Aa-eve" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="EQV-gO-RRb"/>
-                            <constraint firstItem="mzL-kd-sBK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="H8j-ju-Vfk"/>
-                            <constraint firstItem="mzL-kd-sBK" firstAttribute="top" secondItem="OSN-Aa-eve" secondAttribute="bottom" id="HQg-qc-mVf"/>
-                            <constraint firstItem="OSN-Aa-eve" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Kkm-6U-QZo"/>
-                            <constraint firstAttribute="trailing" secondItem="OSN-Aa-eve" secondAttribute="trailing" id="Wei-nW-pSa"/>
-                            <constraint firstAttribute="trailing" secondItem="mzL-kd-sBK" secondAttribute="trailing" id="fpz-oD-hfL"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mzL-kd-sBK" secondAttribute="bottom" id="n5T-gJ-x3s"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wbS-Gv-piS" secondAttribute="bottom" constant="64" id="6T7-mh-GYv"/>
+                            <constraint firstItem="wbS-Gv-piS" firstAttribute="top" secondItem="lQo-uk-Rx5" secondAttribute="bottom" constant="19" id="C2t-oe-EAp"/>
+                            <constraint firstItem="lQo-uk-Rx5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="Ldj-GX-ihS"/>
+                            <constraint firstItem="lQo-uk-Rx5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="ejY-e5-IGd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lQo-uk-Rx5" secondAttribute="trailing" constant="-16" id="lup-qA-kAg"/>
+                            <constraint firstItem="wbS-Gv-piS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yi4-Pz-Rgo"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="cameraPicker" destination="mzL-kd-sBK" id="nPK-pI-llN"/>
-                        <outlet property="imageView" destination="OSN-Aa-eve" id="obu-jG-wsb"/>
+                        <outlet property="imageView" destination="lQo-uk-Rx5" id="mh3-MA-7At"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
